Standardize header logos and hero sections across all pages
- Updated all page headers to consistent 100px logo height matching home page
- Standardized hero sections with theater background image and semi-circle wave decorations
- Applied About page breadcrumb structure to all pages (except home)
- Removed blog-hero section from blog page
- Updated Contact page hero section to match About page design
- Fixed mobile menu logos across all spectacle detail pages
- Ensured consistent branding with proper alt text throughout site

--- a/about.html
+++ b/about.html
@@ -100,20 +100,6 @@
 		Header Area
 	==============================-->
   <header class="vs-header">
-    <div class="vs-header__top">
-      <div class="container container--custom">
-        <div class="row align-items-center justify-content-between gy-1 text-center text-lg-start">
-          <div class="col-lg-auto d-none d-lg-block">
-            <div class="d-flex align-items-center flex-wrap gap-4">
-              <div class="vs-header__info">
-                <i class="fa-solid fa-envelope"></i>
-                <span> Email : <a href="mailto:info@edjs.ma">info@edjs.ma</a></span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <!--==============================
 		Mobile Menu
 	============================== -->
@@ -484,7 +470,7 @@
           <div class="row justify-content-between align-items-center">
             <div class="col">
               <div class="vs-header__logo">
-                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="height: 169px; width: auto;"></a>
+                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
               </div>
             </div>
             <div class="col-auto">
@@ -547,7 +533,8 @@
                     <i class="far fa-search"></i>
                   </button>
                 </div>
-                <div class="d-none d-xxl-inline-flex">
+                <div class="d-none d-xxl-inline-flex" style="display: flex; gap: 15px; align-items: center;">
+                  <a href="auth" class="vs-btn-login" style="background: transparent; color: #BDCF00; border: 2px solid #BDCF00; padding: 10px 20px; border-radius: 25px; font-weight: 600; text-decoration: none; transition: all 0.3s ease; font-size: 14px;">Se connecter</a>
                   <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="vs-btn"><span class="vs-btn__border"></span>Je m'inscris</a>
                 </div>
                 <div class="d-none d-lg-inline-flex align-items-center">
@@ -604,7 +591,7 @@
           </div>
           <p style="font-size: 18px; color: #666; line-height: 1.8;">
             Depuis 2013, nous transformons l'accès à la culture pour les enfants du Maroc. 
-            Notre mission est de démocratiser les arts vivants et créer une nouvelle génération de spectateurs passionnés.
+            Notre mission est de démocratiser les arts vivants et de créer une nouvelle génération de spectateurs passionnés.
           </p>
         </div>
       </div>
@@ -744,8 +731,8 @@
         <div class="col-lg-8">
           <div class="vs-title title-anime animation-style2">
             <div class="title-anime__wrap">
-              <span class="vs-title__sub" style="color: #7e8a01;">Nos Valeurs</span>
-              <h2 class="vs-title__main">Ce Qui Nous Guide</h2>
+              <span class="vs-title__sub" style="color: #7e8a01;">Notre Vision</span>
+              <h2 class="vs-title__main">L'Art au Service de l'Éducation</h2>
             </div>
           </div>
         </div>
@@ -829,7 +816,6 @@
             </a>
             <div class="vs-title title-anime animation-style2">
               <div class="title-anime__wrap">
-                <span class="vs-title__sub text-white">Besoin d'aide ?</span>
                 <h2 class="vs-title__main text-white">
                   Nos Spectacles EDJS
                 </h2>
@@ -943,14 +929,13 @@
                 </a>
               </div>
               <p class="vs-footer__desc text-center text-md-start" style="color: #999999;">
-                EDJS propose des spectacles théâtraux éducatifs et
-                des ateliers créatifs pour enfants.
+                Chaque élève a l'opportunité de découvrir et d'explorer la richesse des arts de la scène à travers la danse, le théâtre et la musique, qui sont au cœur de notre programme.
               </p>
               <div class="icon-call justify-content-center justify-content-md-start pt-10 mb-10">
                 <span class="icon-call__icon"><i class="fa-solid fa-phone-rotary"></i></span>
                 <div class="icon-call__content">
                   <span class="icon-call__title">support téléphonique</span>
-                  <a href="tel:+1344688955" class="icon-call__number">+1 344 688 955</a>
+                  <a href="tel:+212522981085" class="icon-call__number">+212 5 22 98 10 85</a>
                 </div>
               </div>
               <div class="social-style social-style--version2 w-100 justify-content-center justify-content-md-start pt-25">
@@ -978,7 +963,7 @@
           </div>
           <div class="col-lg-4 col-md-6 wow animate__fadeInUp" data-wow-delay="0.45s">
             <div class="vs-footer__widget">
-              <h3 class="vs-footer__title" style="color: #cccccc;">Instagram</h3>
+              <h3 class="vs-footer__title" style="color: #cccccc;">Gallery</h3>
               <div class="sidebar-gallery" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px;">
                 <div class="gallery-thumb" style="aspect-ratio: 1; overflow: hidden;">
                   <img src="assets/img/Les_Trois_Brigands_Web_026.jpg" alt="Gallery Image" style="width: 100%; height: 100%; object-fit: cover;">
@@ -1016,7 +1001,7 @@
           <div class="col-md-auto">
             <p class="vs-footer__copyright mb-0" style="color: #999999;">
               Copyright © <span id="currentYear"></span>
-              <a href="/">EDJS</a>. Tous droits réservés.
+              <a href="/">L'École des jeunes spectateurs</a>. Tous droits réservés.
             </p>
           </div>
           <div class="col-md-auto">
