--- a/blog.html
+++ b/blog.html
@@ -401,10 +401,6 @@
                 <i class="fa-solid fa-envelope"></i>
                 <span> Email : <a href="mailto:info@edjs.ma">info@edjs.ma</a></span>
               </div>
-              <div class="vs-header__info">
-                <i class="fa-solid fa-phone-volume"></i>
-                <span> Téléphone : <a href="tel:+212522981085">+212 5 22 98 10 85</a></span>
-              </div>
             </div>
           </div>
           <div class="col-lg-auto">
@@ -418,7 +414,7 @@
           <div class="row justify-content-between align-items-center">
             <div class="col">
               <div class="vs-header__logo">
-                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="height: 169px; width: auto;"></a>
+                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
               </div>
             </div>
             <div class="col-auto">
@@ -490,16 +486,28 @@
     </div>
   </header>
 
-  <main>
-    <!-- Hero Section -->
-    <section class="blog-hero">
-      <div class="container">
-        <div class="blog-hero-content">
-          <h1>Blog EDJS</h1>
-          <p>Découvrez l'univers du théâtre jeunesse, nos coulisses et actualités culturelles</p>
+  <!-- Breadcrumb -->
+  <div class="breadcrumb-wrapper z-index-common overflow-hidden">
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
+    <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
+      <img src="assets/edjs img/bg-header-home-v2.webp" alt="EDJS Background">
+    </div>
+    <div class="container">
+      <div class="breadcrumb-wrapper__content wow animate__fadeInUp" data-wow-delay="0.45s">
+        <h1 class="breadcrumb-wrapper__title">Blog</h1>
+        <div class="breadcrumb-wrapper__menu--wrap">
+          <ul class="breadcrumb-wrapper__menu">
+            <li class="breadcrumb-wrapper__menu--item"><a href="/">Accueil</a></li>
+            <li class="breadcrumb-wrapper__menu--item">Blog</li>
+          </ul>
         </div>
       </div>
-    </section>
+    </div>
+    <div class="vs-balls vs-balls--screen" data-balls-bottom="-6px" data-balls-color="#ffffff"></div>
+  </div>
+  <!-- Breadcrumb End -->
+
+  <main>
 
     <!-- Blog Content -->
     <section class="blog-section">
