--- a/partners.html
+++ b/partners.html
@@ -280,10 +280,6 @@
                 <i class="fa-solid fa-envelope"></i>
                 <span> Email : <a href="mailto:info@edjs.ma">info@edjs.ma</a></span>
               </div>
-              <div class="vs-header__info">
-                <i class="fa-solid fa-phone-volume"></i>
-                <span> Téléphone : <a href="tel:+212522981085">+212 5 22 98 10 85</a></span>
-              </div>
             </div>
           </div>
           <div class="col-lg-auto">
@@ -297,7 +293,7 @@
   <div class="vs-menu-wrapper">
     <div class="vs-menu-area text-center">
       <div class="mobile-logo">
-        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="height: 120px; width: auto; max-width: none !important;"></a>
+        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
         <button class="vs-menu-toggle">
           <i class="fa-solid fa-xmark"></i>
         </button>
@@ -407,7 +403,7 @@
           <div class="row justify-content-between align-items-center">
             <div class="col">
               <div class="vs-header__logo">
-                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
+                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
               </div>
             </div>
             <div class="col-auto">
@@ -479,6 +475,28 @@
     </div>
   </header>
 
+  <!-- Breadcrumb -->
+  <div class="breadcrumb-wrapper z-index-common overflow-hidden">
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
+    <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
+      <img src="assets/edjs img/bg-header-home-v2.webp" alt="EDJS Background">
+    </div>
+    <div class="container">
+      <div class="breadcrumb-wrapper__content wow animate__fadeInUp" data-wow-delay="0.45s">
+        <h1 class="breadcrumb-wrapper__title">Nos Partenaires</h1>
+        <div class="breadcrumb-wrapper__menu--wrap">
+          <ul class="breadcrumb-wrapper__menu">
+            <li class="breadcrumb-wrapper__menu--item"><a href="/">Accueil</a></li>
+            <li class="breadcrumb-wrapper__menu--item">Partenaires</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="vs-balls vs-balls--screen" data-balls-bottom="-6px" data-balls-color="#ffffff"></div>
+  </div>
+  <!-- Breadcrumb End -->
+
+
   <!--==============================
     Hero Section
   ==============================-->
@@ -507,7 +525,7 @@
           <div class="partner-card fade-in-up">
             <div class="partnership-type">Partenaire Institutionnel</div>
             <div class="partner-logo">
-              <img src="assets/img/partners/A4P07-02-2025_15-36-26avision.png" alt="Fondation DGSN">
+              <img src="assets/img/partners/A4P07-02-2025_15-36-26avision-removebg-preview.png" alt="Fondation DGSN">
             </div>
             <h3 class="partner-name">Fondation DGSN</h3>
             <p class="partner-description">
@@ -516,35 +534,7 @@
           </div>
         </div>
 
-        <!-- Partner 2: OCP Group -->
-        <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Partenaire Industriel</div>
-            <div class="partner-logo">
-              <img src="assets/img/partners/OCP_Group.svg.png" alt="OCP Group">
-            </div>
-            <h3 class="partner-name">OCP Group</h3>
-            <p class="partner-description">
-              Expansion nationale au niveau des différents sites de l'OCP, notamment dans les villes de Benguerir, Safi, Khouribga, Youssoufia, Laayoune et Ljarf lasfar.
-            </p>
-          </div>
-        </div>
-
-        <!-- Partner 3: Fondation Mohammed VI -->
-        <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Partenaire Éducatif</div>
-            <div class="partner-logo">
-              <img src="assets/img/partners/FONDATION_MVI_logo.jpg" alt="Fondation Mohammed VI">
-            </div>
-            <h3 class="partner-name">Fondation Mohammed VI</h3>
-            <p class="partner-description">
-              Collaborer avec les sites de la fondation Mohamed VI de promotion des œuvres sociales de l'éducation-formation, et faire bénéficier les enfants des adhérents.
-            </p>
-          </div>
-        </div>
-
-        <!-- Partner 4: Crédit Agricole du Maroc -->
+        <!-- Partner 2: Crédit Agricole du Maroc -->
         <div class="col-lg-4 col-md-6">
           <div class="partner-card fade-in-up">
             <div class="partnership-type">Partenaire Financier</div>
@@ -558,12 +548,54 @@
           </div>
         </div>
 
-        <!-- Partner 5: Marsa Maroc -->
+        <!-- Partner 3: Ministère de l'Éducation Nationale -->
+        <div class="col-lg-4 col-md-6">
+          <div class="partner-card fade-in-up">
+            <div class="partnership-type">Partenaire Gouvernemental</div>
+            <div class="partner-logo">
+              <img src="assets/img/partners/Men_2021-removebg-preview.png" alt="Ministère de l'Éducation Nationale">
+            </div>
+            <h3 class="partner-name">Ministère de l'Éducation Nationale</h3>
+            <p class="partner-description">
+              Partenariat officiel avec le Ministère de l'Éducation Nationale pour intégrer nos programmes culturels dans le curriculum scolaire national.
+            </p>
+          </div>
+        </div>
+
+        <!-- Partner 4: Fondation Mohammed VI -->
+        <div class="col-lg-4 col-md-6">
+          <div class="partner-card fade-in-up">
+            <div class="partnership-type">Partenaire Éducatif</div>
+            <div class="partner-logo">
+              <img src="assets/img/partners/fondation-mohammed-6-logo-png_seeklogo-315870.png" alt="Fondation Mohammed VI">
+            </div>
+            <h3 class="partner-name">Fondation Mohammed VI</h3>
+            <p class="partner-description">
+              Collaborer avec les sites de la fondation Mohamed VI de promotion des œuvres sociales de l'éducation-formation, et faire bénéficier les enfants des adhérents.
+            </p>
+          </div>
+        </div>
+
+        <!-- Partner 5: OCP Group -->
+        <div class="col-lg-4 col-md-6">
+          <div class="partner-card fade-in-up">
+            <div class="partnership-type">Partenaire Industriel</div>
+            <div class="partner-logo">
+              <img src="assets/img/partners/OCP_Group.svg.png" alt="OCP Group">
+            </div>
+            <h3 class="partner-name">OCP Group</h3>
+            <p class="partner-description">
+              Expansion nationale au niveau des différents sites de l'OCP, notamment dans les villes de Benguerir, Safi, Khouribga, Youssoufia, Laayoune et Ljarf lasfar.
+            </p>
+          </div>
+        </div>
+
+        <!-- Partner 6: Marsa Maroc -->
         <div class="col-lg-4 col-md-6">
           <div class="partner-card fade-in-up">
             <div class="partnership-type">Partenaire Portuaire</div>
             <div class="partner-logo">
-              <img src="assets/img/partners/MARSA_MAROC_LOGO_C_ENG.pdf" alt="Marsa Maroc" style="background: white; padding: 10px; border-radius: 8px;">
+              <img src="assets/img/partners/MARSA_MAROC_LOGO_C_ENG-1-removebg-preview.png" alt="Marsa Maroc">
             </div>
             <h3 class="partner-name">Marsa Maroc</h3>
             <p class="partner-description">
@@ -572,7 +604,7 @@
           </div>
         </div>
 
-        <!-- Partner 6: Vivo Maroc -->
+        <!-- Partner 7: Vivo Maroc -->
         <div class="col-lg-4 col-md-6">
           <div class="partner-card fade-in-up">
             <div class="partnership-type">Partenaire Technologique</div>
@@ -592,12 +624,12 @@
       <h2 class="section-title fade-in-up" style="margin-top: 5rem;">Nos Partenaires Éducatifs</h2>
       <div class="row g-4">
         
-        <!-- Partner 7: EDGS -->
+        <!-- Partner 8: EDGS -->
         <div class="col-lg-4 col-md-6">
           <div class="partner-card fade-in-up">
             <div class="partnership-type">Établissement Scolaire</div>
             <div class="partner-logo">
-              <img src="assets/img/partners/logo EDGS-01.png" alt="EDGS">
+              <img src="assets/img/partners/logo EDGS-02.png" alt="EDGS">
             </div>
             <h3 class="partner-name">École Privée EDGS</h3>
             <p class="partner-description">
@@ -606,7 +638,7 @@
           </div>
         </div>
 
-        <!-- Partner 8: Annexe Hay Hassani -->
+        <!-- Partner 9: Annexe Hay Hassani -->
         <div class="col-lg-4 col-md-6">
           <div class="partner-card fade-in-up">
             <div class="partnership-type">Centre Éducatif</div>
@@ -620,7 +652,7 @@
           </div>
         </div>
 
-        <!-- Partner 9: Achraf Hakimi Foundation -->
+        <!-- Partner 10: Achraf Hakimi Foundation -->
         <div class="col-lg-4 col-md-6">
           <div class="partner-card fade-in-up">
             <div class="partnership-type">Fondation Sportive</div>
