--- a/gallery.html
+++ b/gallery.html
@@ -698,10 +698,6 @@
                 <i class="fa-solid fa-envelope"></i>
                 <span> Email : <a href="mailto:info@edjs.ma">info@edjs.ma</a></span>
               </div>
-              <div class="vs-header__info">
-                <i class="fa-solid fa-phone-volume"></i>
-                <span> Téléphone : <a href="tel:+212522981085">+212 5 22 98 10 85</a></span>
-              </div>
             </div>
           </div>
           <div class="col-lg-auto">
@@ -715,7 +711,7 @@
           <div class="row justify-content-between align-items-center">
             <div class="col">
               <div class="vs-header__logo">
-                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="height: 169px; width: auto;"></a>
+                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
               </div>
             </div>
             <div class="col-auto">
@@ -778,7 +774,8 @@
                     <i class="far fa-search"></i>
                   </button>
                 </div>
-                <div class="d-none d-xxl-inline-flex">
+                <div class="d-none d-xxl-inline-flex" style="display: flex; gap: 15px; align-items: center;">
+                  <a href="auth" class="vs-btn-login" style="background: transparent; color: #BDCF00; border: 2px solid #BDCF00; padding: 10px 20px; border-radius: 25px; font-weight: 600; text-decoration: none; transition: all 0.3s ease; font-size: 14px;">Se connecter</a>
                   <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="vs-btn"><span class="vs-btn__border"></span>Je m'inscris</a>
                 </div>
                 <div class="d-none d-lg-inline-flex align-items-center">
@@ -801,19 +798,29 @@
     </div>
   </header>
 
-  <!-- Main Content -->
-  <main>
-    <!-- Breadcrumb Section -->
-    <section class="breadcrumb-section">
-      <div class="container">
-        <div class="breadcrumb-content">
-          <h1 class="breadcrumb-title">Notre Galerie</h1>
-          <nav class="breadcrumb-nav">
-            <a href="/">Accueil</a> / <span>Galerie</span>
-          </nav>
+  <!-- Breadcrumb -->
+  <div class="breadcrumb-wrapper z-index-common overflow-hidden">
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
+    <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
+      <img src="assets/edjs img/bg-header-home-v2.webp" alt="EDJS Background">
+    </div>
+    <div class="container">
+      <div class="breadcrumb-wrapper__content wow animate__fadeInUp" data-wow-delay="0.45s">
+        <h1 class="breadcrumb-wrapper__title">Galerie</h1>
+        <div class="breadcrumb-wrapper__menu--wrap">
+          <ul class="breadcrumb-wrapper__menu">
+            <li class="breadcrumb-wrapper__menu--item"><a href="/">Accueil</a></li>
+            <li class="breadcrumb-wrapper__menu--item">Galerie</li>
+          </ul>
         </div>
       </div>
-    </section>
+    </div>
+    <div class="vs-balls vs-balls--screen" data-balls-bottom="-6px" data-balls-color="#ffffff"></div>
+  </div>
+  <!-- Breadcrumb End -->
+
+  <!-- Main Content -->
+  <main>
 
     <!-- Filter Section -->
     <section class="gallery-filters">
