--- a/spectacle-alice-chez-les-merveilles.html
+++ b/spectacle-alice-chez-les-merveilles.html
@@ -51,7 +51,7 @@
   <div class="vs-menu-wrapper">
     <div class="vs-menu-area text-center">
       <div class="mobile-logo">
-        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="max-height: 50px;"></a>
+        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
         <button class="vs-menu-toggle">
           <i class="fa-solid fa-xmark"></i>
         </button>
@@ -80,10 +80,6 @@
                 <i class="fa-solid fa-envelope"></i>
                 <span> Email : <a href="mailto:info@edjs.ma">info@edjs.ma</a></span>
               </div>
-              <div class="vs-header__info">
-                <i class="fa-solid fa-phone-volume"></i>
-                <span> Téléphone : <a href="tel:+212522981085">+212 5 22 98 10 85</a></span>
-              </div>
             </div>
           </div>
           <div class="col-lg-auto">
@@ -97,7 +93,7 @@
           <div class="row justify-content-between align-items-center">
             <div class="col">
               <div class="vs-header__logo">
-                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="height: 169px; width: auto;"></a>
+                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
               </div>
             </div>
             <div class="col-auto">
