--- a/spectacle-casse-noisette.html
+++ b/spectacle-casse-noisette.html
@@ -84,8 +84,8 @@
   <div class="vs-menu-wrapper">
     <div class="vs-menu-area text-center">
       <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
-      <div class="mobile-logo">
-                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="height: 169px; width: auto;"></a>
+      <div class="vs-header__logo">
+        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
       </div>
       <div class="vs-mobile-menu">
         <ul>
@@ -112,10 +112,6 @@
               <div class="vs-header__info">
                 <i class="fa-solid fa-envelope"></i>
                 <span> Email : <a href="mailto:info@edjs.ma">info@edjs.ma</a></span>
-              </div>
-              <div class="vs-header__info">
-                <i class="fa-solid fa-phone-volume"></i>
-                <span> Téléphone : <a href="tel:+212522981085">+212 5 22 98 10 85</a></span>
               </div>
             </div>
           </div>
@@ -151,7 +147,7 @@
           <div class="row align-items-center justify-content-between">
             <div class="col-auto">
               <div class="header-logo">
-                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" style="height: 50px;"></a>
+                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
               </div>
             </div>
             <div class="col-auto">
