--- a/contact.html
+++ b/contact.html
@@ -433,28 +433,10 @@
         </div>
       </div>
     </div>
-  </div>
   <!--==============================
         Header layout 1
     ==============================-->
   <header class="vs-header">
-    <!-- Header Element -->
-    <div class="vs-balls"></div>
-    <!-- Header Top -->
-              </div>
-              <div class="vs-header__info">
-                <i class="fa-solid fa-clock-rotate-left"></i>
-                <span class="text-theme-color5">
-                Horaires :
-                <a href="tel:9h00-17h00">9h00-17h00</a></span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-auto">
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="sticky-wrapper">
       <div class="sticky-active">
         <div class="container container--custom">
@@ -508,7 +490,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets active" href="contact">
+                    <a class="vs-svg-assets" href="contact">
                       CONTACT
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -517,18 +499,15 @@
                   </li>
                 </ul>
               </nav>
-              <div class="header-buttons">
-                <a href="registration" class="vs-btn vs-btn-outline" style="margin-right: 10px;">Se connecter</a>
-                <a href="registration" class="vs-btn vs-style1">Je m'inscris</a>
-              </div>
-              <div class="header-icons">
-                <button type="button" class="vs-menu-toggle d-inline-block d-lg-none">
-                    <svg width="31" height="23" viewBox="0 0 31 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M2.9165 4.5H28.4165C29.6594 4.5 30.6665 3.49292 30.6665 2.25C30.6665 1.00708 29.6594 0 28.4165 0H2.9165C1.67358 0 0.666504 1.00708 0.666504 2.25C0.666504 3.49292 1.67358 4.5 2.9165 4.5Z" fill="currentColor" />
-                      <path d="M28.4165 9H2.9165C1.67358 9 0.666504 10.0071 0.666504 11.25C0.666504 12.4929 1.67358 13.5 2.9165 13.5H28.4165C29.6594 13.5 30.6665 12.4929 30.6665 11.25C30.6665 10.0071 29.6594 9 28.4165 9Z" fill="currentColor" />
-                      <path d="M28.4165 18H2.9165C1.67358 18 0.666504 19.0071 0.666504 20.25C0.666504 21.4929 1.67358 22.5 2.9165 22.5H28.4165C29.6594 22.5 30.6665 21.4929 30.6665 20.25C30.6665 19.0071 29.6594 18 28.4165 18Z" fill="currentColor" />
-                    </svg>
+              <div class="vs-header__action">
+                <div class="d-none d-md-inline-flex align-items-center">
+                  <button class="searchBoxTggler">
+                    <i class="far fa-search"></i>
                   </button>
+                </div>
+                <div class="d-none d-xxl-inline-flex" style="display: flex; gap: 15px; align-items: center;">
+                  <a href="auth" class="vs-btn-login" style="background: transparent; color: #BDCF00; border: 2px solid #BDCF00; padding: 10px 20px; border-radius: 25px; font-weight: 600; text-decoration: none; transition: all 0.3s ease; font-size: 14px;">Se connecter</a>
+                  <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="vs-btn"><span class="vs-btn__border"></span>Je m'inscris</a>
                 </div>
                 <button class="vs-menu-toggle style2 d-inline-block d-lg-none">
                   <i class="fal fa-bars"></i>
