Fix contact page header layout alignment
- Separated navigation menu and action buttons into separate col-auto divs
- Ensures buttons (search, login, register) appear on same line as menu
- Maintains proper Bootstrap grid structure for responsive layout
- Header now matches home page layout exactly

--- a/contact.html
+++ b/contact.html
@@ -500,6 +500,8 @@
                   </li>
                 </ul>
               </nav>
+            </div>
+            <div class="col-auto">
               <div class="vs-header__action">
                 <div class="d-none d-md-inline-flex align-items-center">
                   <button class="searchBoxTggler">
