Add semi-circle decorations to hero sections
- Added vs-balls decorations to top and bottom of breadcrumb sections
- Applied to about.html, 404.html, blog-details.html, and spectacle-alice-chez-les-merveilles.html
- Ensures consistent semi-circle wave design across all page hero sections
- Matches home page decorative styling

--- a/404.html
+++ b/404.html
@@ -494,6 +494,7 @@
   </div>
   <!-- Breadcrumb -->
   <div class="breadcrumb-wrapper z-index-common overflow-hidden">
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
       <img src="assets/img/Tara_Sur_La_Lune_Web_020.jpg" alt="École des Jeunes Spectateurs" />
     </div>
