--- a/blog-details.html
+++ b/blog-details.html
@@ -536,9 +536,9 @@
         Header layout 2
     ==============================-->
   <!-- Breadcrumb -->
-  <!-- Breadcrumb Style -->
-  <div class="breadcrumb-wrapper" data-bg-src="assets/img/bg/breadcrumb-bg-1.jpg">
-    <div class="vs-balls vs-balls--screen" data-balls-bottom="-6px" data-balls-color="#ffffff"></div>
+  <!-- Breadcrumb -->
+  <div class="breadcrumb-wrapper z-index-common overflow-hidden">
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <div class="container">
       <div class="breadcrumb-wrapper__content">
         <h1 class="breadcrumb-wrapper__title">Blog Details</h1>
@@ -550,8 +550,8 @@
         </div>
       </div>
     </div>
+    <div class="vs-balls vs-balls--screen" data-balls-bottom="-6px" data-balls-color="#ffffff"></div>
   </div>
-  <!-- Breadcrumb Style End -->
   <!-- Breadcrumb End -->
   <!-- Blog -->
   <section class="vs-section space space-extra-bottom">
