--- a/spectacle-alice-chez-les-merveilles.html
+++ b/spectacle-alice-chez-les-merveilles.html
@@ -47,6 +47,20 @@
 </head>
 
 <body>
+  <!-- Breadcrumb -->
+  <div class="breadcrumb-wrapper z-index-common overflow-hidden">
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
+    <div class="container u-area text-center">
+      <div class="mobile-logo">
+        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
+        <button class="vs-menu-toggle">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+      </div>
+    </div>
+    <div class="vs-balls vs-balls--screen" data-balls-bottom="-6px" data-balls-color="#ffffff"></div>
+  </div>
+  <!-- Breadcrumb End -->
   <!-- Mobile Menu -->
   <div class="vs-menu-wrapper">
     <div class="vs-menu-area text-center">
