--- a/about.html
+++ b/about.html
@@ -561,6 +561,7 @@
     ==============================-->
   <!-- Breadcrumb -->
   <div class="breadcrumb-wrapper z-index-common overflow-hidden">
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
       <img src="assets/edjs img/bg-header-home-v2.webp" alt="EDJS Background">
     </div>
@@ -570,8 +571,6 @@
         <div class="breadcrumb-wrapper__menu--wrap">
           <ul class="breadcrumb-wrapper__menu">
             <li class="breadcrumb-wrapper__menu--item"><a href="/">Accueil</a></li>
-            <li class="breadcrumb-wrapper__menu--item">À Propos</li>
-          </ul>
         </div>
       </div>
     </div>
