Complete hero section standardization: Add semi-circle wave decorations to all remaining spectacle pages
- Added vs-balls decorations to top and bottom of hero sections on:
  * spectacle-estevanico.html
  * spectacle-tara-sur-la-lune.html
  * spectacle-le-petit-prince.html
  * spectacle-leau-la.html
  * spectacle-lenfant-de-larbre.html
  * spectacle-simple-comme-bonjour.html

- All pages now have consistent hero section design matching home page
- Completes EDJS website branding and layout standardization project

--- a/spectacle-casse-noisette.html
+++ b/spectacle-casse-noisette.html
@@ -214,6 +214,7 @@
     Hero Section
   ==============================-->
   <section class="vs-hero-wrapper position-relative" style="min-height: 70vh; display: flex; align-items: center;">
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
   <style>
     @media (max-width: 768px) {
       .vs-hero-wrapper {
@@ -328,6 +329,7 @@
         </div>
       </div>
     </div>
+    <div class="vs-balls vs-balls--screen" data-balls-bottom="-6px" data-balls-color="#ffffff"></div>
   </section>
 
   <!--==============================
