--- a/spectacle-tara-sur-la-lune.html
+++ b/spectacle-tara-sur-la-lune.html
@@ -565,7 +565,8 @@
   </header>
 
   <!-- Hero Section -->
-  <div class="spectacle-hero">
+  <section class="spectacle-hero" style="background: linear-gradient(135deg, #70167E 0%, #9B1B8E 100%); position: relative; overflow: hidden;">
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <!-- Decorative patterns -->
     <div class="hero-decorations">
       <div style="position: absolute; top: 10%; left: 10%; width: 80px; height: 80px; border-radius: 50%; background: var(--secondary-color);"></div>
@@ -663,6 +664,7 @@
         </div>
       </div>
     </div>
+    <div class="vs-balls vs-balls--screen" data-balls-bottom="-6px" data-balls-color="#ffffff"></div>
   </section>
 
   <!-- Main Content -->
