--- a/spectacle-simple-comme-bonjour.html
+++ b/spectacle-simple-comme-bonjour.html
@@ -572,6 +572,7 @@
 
   <!-- Hero Section -->
   <section class="spectacle-hero" style="background: linear-gradient(135deg, #BDCF00 0%, #A8B800 100%); position: relative; overflow: hidden;">
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <!-- Background Elements -->
     <div class="hero-bg-elements">
       <div class="floating-shape shape-1"></div>
@@ -638,6 +639,7 @@
         </div>
       </div>
     </div>
+    <div class="vs-balls vs-balls--screen" data-balls-bottom="-6px" data-balls-color="#ffffff"></div>
   </section>
 
   <!-- Main Content -->
